--- a/src/uikit/PrimaryButton/primaryButton.module.css
+++ b/src/uikit/PrimaryButton/primaryButton.module.css
@@ -3,16 +3,16 @@
   justify-content: center;
   align-items: center;
   font: var(--inter-bold-font);
-  font-size: var(--font-size-x);
+  font-size: var(--font-size-big);
   color: var(--primary-button-font-color);
   border: 0 none;
   height: var(--primary-button-desktop-height);
-  width: 296px;
+  width: var(--primary-button-desktop-width);
   background-color: var(--primary-button-inactive-color);
   transition: background-color var(--default-transition-duration)
     var(--default-transition-function);
-  cursor: pointer;
   border-radius: var(--primary-button-border-radius);
+  cursor: pointer;
 }
 
 .wrapper:hover {
@@ -21,4 +21,12 @@
 
 .wrapper:active {
   background-color: var(--primary-button-pressed-color);
+}
+
+@media only screen and (max-width: 768px) {
+  .wrapper {
+    height: var(--primary-button-mobile-height);
+    font-size: var(--font-size-small);
+    width: var(--primary-button-mobile-width);
+  }
 }
