--- a/src/components/molecules/GameSteps/gameSteps.module.css
+++ b/src/components/molecules/GameSteps/gameSteps.module.css
@@ -1,10 +1,7 @@
 .wrapper {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  display: grid;
+  row-gap: 8px;
   width: 376px;
-  height: 100%;
-  gap: 8px;
 }
 
 @media only screen and (max-width: 768px) {
