--- a/src/components/organisms/GameQuiz/gameQuiz.module.css
+++ b/src/components/organisms/GameQuiz/gameQuiz.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   /*width: 842px;*/
   height: 100%;
 }
